# OPEN-2015

./: README.md  readme.md
autobotz_ws/: Comandos_Compilacao  Salva_dados_IMU.txt  rebuild_ws.sh  rebuild_ws.sh~
autobotz_ws/codigos_arduinos/: base.ino  manipulador.ino  master.ino
autobotz_ws/codigos_arduinos/antigos/MotorDePasso/: motor_passo.ino
autobotz_ws/codigos_arduinos/antigos/botao_start/: Botao_start.ino
autobotz_ws/codigos_arduinos/antigos/ultrassonicos/: Ultrassom_distanciaROS  distancia_4topicos  ultrassonico_distancia_4topicos
autobotz_ws/config/: arduinos.conf  palette.conf
autobotz_ws/devel/: .catkin  .rosinstall  setup.sh
autobotz_ws/devel/include/blob_detect/: feature.h  squareCenters.h
autobotz_ws/devel/include/controle/: squareCenters.h
autobotz_ws/devel/include/estrategia/: trajetoria.h  velocidade.h
autobotz_ws/devel/include/rosserial_arduino/: Adc.h  Test.h  TestRequest.h  TestResponse.h  ultrassom.h
autobotz_ws/devel/include/rosserial_msgs/: Log.h  RequestMessageInfo.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParam.h  RequestParamRequest.h  RequestParamResponse.h  TopicInfo.h
autobotz_ws/devel/include/square_detect/: squareCenters.h
autobotz_ws/devel/lib/beginner_tutorials/: infoP  infoS
autobotz_ws/devel/lib/blob_detect/: blob_detect
autobotz_ws/devel/lib/controle/: control
autobotz_ws/devel/lib/estrategia/: main  strategy
autobotz_ws/devel/lib/imu/: arducom
autobotz_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  blob_detect.pc  controle.pc  estrategia.pc  imu.pc  radio_controle.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_windows.pc  rosserial_xbee.pc  square_detect.pc
autobotz_ws/devel/lib/radio_controle/: radio_listener  radio_talker
autobotz_ws/devel/lib/rosserial_server/: serial_node  socket_node
autobotz_ws/devel/lib/square_detect/: square_detect
autobotz_ws/src/IMU/: CMakeLists.txt  CMakeLists.txt~
autobotz_ws/src/IMU/src/: CerealPort.cpp~  Detecta_Laranja.cpp~  IMUdata.txt~  Le_Porta_Serial.cpp~  Subscriber_Dados_IMU.cpp~  TrataImagem_RGB.cpp~  TrataImagem_RGB~  funcao.hpp~  funcao.h~  listener.cpp~  main (2).cpp~  main.cpp~  talker.cpp~  teste.cpp~  teste2.cpp~
autobotz_ws/src/IMU/src/arducom/: IMU_Data.cpp  IMU_Data.cpp~  rs232.c  rs232.h
autobotz_ws/src/barco_launch/: CMakeLists.txt  CMakeLists.txt~  comandos_caracol.txt  comandos_compilacao  package.xml  package.xml~
autobotz_ws/src/barco_launch/launch/: barco.launch  barco.launch~  barco_debug.launch  using_env_vars.launch
autobotz_ws/src/barco_launch/src/: main.cpp
autobotz_ws/src/blob_detect/: CMakeLists.txt  CMakeLists.txt~  package.xml~
autobotz_ws/src/blob_detect/src/: CV_pipeline.cpp  CV_pipeline.hpp  UI.cpp  UI.hpp  aux.cpp  aux.hpp  codigo_do_luiz.cpp~  findContours.cpp  main.cpp  main.cpp~
autobotz_ws/src/controle/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
autobotz_ws/src/controle/msg/: velocidade.msg
autobotz_ws/src/controle/src/: constantes.txt  main.cpp  (+3 more)
autobotz_ws/src/eletronica/: ultrassonicos.ino
autobotz_ws/src/eletronica/controle_seta/: CMakeLists.txt  package.xml
autobotz_ws/src/eletronica/controle_seta/src/: main.cpp
autobotz_ws/src/eletronica/imu/: CMakeLists.txt  CMakeLists.txt~  package.xml
autobotz_ws/src/eletronica/imu/src/arducom/: IMU_Data.cpp  IMU_Data.cpp~  rs232.c
autobotz_ws/src/eletronica/imu/src/arduino/imu/: imu.ino
autobotz_ws/src/eletronica/imu/src/arduino/libraries/RTIMULib/: RTMath.cpp  RTMath.cpp~
autobotz_ws/src/eletronica/velocidade_barco/: CMakeLists.txt  package.xml
autobotz_ws/src/eletronica/velocidade_barco/src/: Publica.cpp  Velocidade_real.cpp
autobotz_ws/src/estrategia/: CMakeLists.txt  CMakeLists.txt~  msgArduino.sh~  package.xml  package.xml~
autobotz_ws/src/estrategia/msg/: featureVec.msg  trajetoria.msg  trajetoria.msg~  velocidade.msg~
autobotz_ws/src/estrategia/src/: constantes.txt  constantes.txt~  estados.cpp  estados.h  main.cpp  modelo.h  normalizaYaw.cpp  pegarBloco.cpp  pegarBloco.h  robo.cpp  robo.h  transportarBloco.cpp  transportarBloco.h  transporte.cpp  transporte.h
autobotz_ws/src/estrategia/src/Funcoes/: auxiliares.cpp  auxiliares.cpp~  auxiliares.hpp  auxiliares.hpp~
autobotz_ws/src/estrategia/src/Obsoleto/: estados.h  modelo.cpp  pegarBloco.h  transportarBloco.h
autobotz_ws/src/radio_controle/: CMakeLists.txt
autobotz_ws/src/radio_controle/src/arduino/: transmite.ino
autobotz_ws/src/radio_controle/src/radio/: listener.cpp  main.cpp
autobotz_ws/src/square_detect/: CMakeLists.txt  CMakeLists.txt~
(+148 files in other folders)
